Rosario Student Information System - CHANGES

Changes in 2.8.5
----------------
- Bugfix SQL error A field with precision 10, scale 2 must round to an absolute value less than 10^8 in *Fields.php, Other_Info.php & *Referrals.php
- Remove table CUSTOM in rosariosis.sql
- Bugfix SQL error syntax error at or near ")" in FinalGrades.php

Changes in 2.8.4
----------------
- Add multiple checkbox fields in ReferralLog.php
- errors if No courses assigned to teacher or No Students were found in GradebookBreakdown.php
- add All Courses & Course-specific comments scales/codes tipmessage in FinalGrades.php & InputFinalGrades.php
- add help for non-core modules in Help.php & Bottom.php
- Remove exit/die/eval in functions, thanks to PHP Mess Detector
- Bugfix check accept cookies in index.php

Changes in 2.8.3
----------------
- bugfix bug when Back to Student Search in StudentSummary.php
- Bugfix conflict staff_id & student_id vars Moodle plugin in AddUsers.php & AddStudents.php
- Check diagnostic.php link after first login in index.php
- Update french, spanish & german translations

Changes in 2.8.2
----------------
- Bugfix unset modfunc even if no values posted
- adapt height if US Letter paper in HonorRoll.php & HonorRollSubject.php
- Bugfix wkhtmltopdf ContentOperationNotPermittedError in HonorRollSubject.php
- send email from rosariosis@[domain] in NotifyParents.php
- Bugfix add Comments as an exception in Student.php
- Check AllowEdit() before saving in MassAssignFees.php, MassAssignPayments.php, AddUsers.php & AddStudents.php
- Bugfix conflict staff_id & student_id vars in AddUsers.php & AddStudents.php

Changes in 2.8.1
----------------
- Appify / add app to iOS / Android home screen in index.php & apple-touch-icon.png
- Add Select Parents email field facility in CreateParents.php
- Allow students to change their password by default in rosariosis.sql
- Bugfix cannot associate parents & students in AddUsers.php & AddStudents.php

Changes in 2.8
--------------